--- a/despicable_me/android/app/build.gradle
+++ b/despicable_me/android/app/build.gradle
@@ -38,8 +38,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.learningactivity2"
-        minSdkVersion 21
+        applicationId "com.example.despicable_me"
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
